fixed quiz management

--- a/Admin User Management/usermanagement.html
+++ b/Admin User Management/usermanagement.html
@@ -59,7 +59,7 @@
                         <span>User Management</span> 
                       </a> </li> 
                       <li class="sidebar-list-item"> 
-                        <a href="../AdminDashboard/quiz management.html" class="menu-item"> 
+                        <a href="../AdminDashboard/NewQuizManagement.html" class="menu-item"> 
                           <i class="bx bx-folder"></i> 
                           <span>Quiz Management</span> </a> 
                         </li> 
@@ -90,6 +90,7 @@
                     <div>Email</div> 
                     <div>Action</div> 
                   </div> 
+
                   <div class="table-content"> 
                     <div id="userModal" class="modal"> 
                       <div class="modal-content"> 
