--- a/AdminDashboard/AdminDashboard.html
+++ b/AdminDashboard/AdminDashboard.html
@@ -85,7 +85,7 @@
               </li>
 
               <li class="sidebar-list-item">
-                  <a href="../AdminDashboard/quiz management.html" class="menu-item">
+                  <a href="../AdminDashboard/NewQuizManagement.html" class="menu-item">
                       <i class="bx bx-folder"></i>
                       <span>Quiz Management</span>
                   </a>
